# bq25895

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  formatting.yml  release.yml
src/: device.rs  interface.rs  lib.rs  types.rs
