[package]
name = "bq25895"
version = "0.0.3"
license = "MIT"
edition = "2024"
homepage = "https://github.com/DanNixon/bq25895"
repository = "https://github.com/DanNixon/bq25895"
readme = "README.md"
description = "Embedded Rust driver for the BQ25895 battery charge controller."

[dependencies]
defmt = "1.0.0"
device-driver = { version = "1.0.9", default-features = false, features = ["dsl"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
num_enum = { version = "0.7.6", default-features = false }
nutype = { version = "0.7.0", default-features = false, features = ["derive_unchecked"] }
paste = "1.0.15"
